--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main && husky install",
+    "postinstall": "node ./decorate-angular-cli.js && husky install",
     "prepublishOnly": "pinst --disable",
     "postpack": "pinst --enable",
     "start": "nx serve",
@@ -28,113 +28,116 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.0.0",
-    "@angular/cdk": "14.0.0",
-    "@angular/common": "14.0.0",
-    "@angular/compiler": "14.0.0",
-    "@angular/core": "14.0.0",
-    "@angular/forms": "14.0.0",
-    "@angular/material": "14.0.0",
-    "@angular/platform-browser": "14.0.0",
-    "@angular/platform-browser-dynamic": "14.0.0",
-    "@angular/router": "14.0.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@ngrx/component-store": "~13.0.0",
-    "@ngrx/effects": "~13.0.0",
-    "@ngrx/entity": "~13.0.0",
-    "@ngrx/router-store": "^14.0.1",
-    "@ngrx/store": "~13.0.0",
-    "@nrwl/angular": "14.1.9",
-    "argon2": "^0.28.5",
+    "@angular/animations": "16.1.2",
+    "@angular/cdk": "16.1.2",
+    "@angular/common": "16.1.2",
+    "@angular/compiler": "16.1.2",
+    "@angular/core": "16.1.2",
+    "@angular/forms": "16.1.2",
+    "@angular/material": "16.1.2",
+    "@angular/platform-browser": "16.1.2",
+    "@angular/platform-browser-dynamic": "16.1.2",
+    "@angular/router": "16.1.2",
+    "@nestjs/common": "10.0.3",
+    "@nestjs/core": "10.0.3",
+    "@nestjs/platform-express": "10.0.3",
+    "@ngrx/component-store": "16.0.1",
+    "@ngrx/effects": "16.0.1",
+    "@ngrx/entity": "16.0.1",
+    "@ngrx/router-store": "16.0.1",
+    "@ngrx/store": "16.0.1",
+    "argon2": "^0.30.3",
     "cookie-parser": "^1.4.6",
-    "date-fns": "^2.28.0",
-    "dexie": "3.2.2",
+    "date-fns": "^2.30.0",
+    "dexie": "3.2.4",
     "enum-for": "^0.0.5",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "msw": "0.42.1",
-    "nodemailer": "^6.7.7",
+    "jsonwebtoken": "^9.0.0",
+    "msw": "1.2.2",
+    "nodemailer": "^6.9.3",
     "password-validator": "^5.3.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~7.4.0",
-    "tslib": "^2.0.0",
-    "uuid": "^8.3.2",
-    "voca": "^1.4.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "7.8.1",
+    "tslib": "^2.5.3",
+    "uuid": "^9.0.0",
+    "voca": "^1.4.1",
+    "zone.js": "0.13.1",
+    "@nx/angular": "16.4.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.0.0",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "14.0.0",
-    "@angular/compiler-cli": "14.0.0",
-    "@angular/language-service": "14.0.0",
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-angular": "^17.0.3",
-    "@compodoc/compodoc": "^1.1.19",
+    "@angular-devkit/build-angular": "16.1.1",
+    "@angular-devkit/core": "16.1.1",
+    "@angular-devkit/schematics": "16.1.1",
+    "@angular-eslint/eslint-plugin": "16.0.3",
+    "@angular-eslint/eslint-plugin-template": "16.0.3",
+    "@angular-eslint/template-parser": "16.0.3",
+    "@angular/cli": "~16.1.0",
+    "@angular/compiler-cli": "16.1.2",
+    "@angular/language-service": "16.1.2",
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-angular": "17.6.5",
+    "@compodoc/compodoc": "^1.1.21",
     "@compodoc/ngd-cli": "^2.1.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@ngrx/schematics": "~13.0.0",
-    "@ngrx/store-devtools": "~13.0.0",
-    "@nrwl/cli": "14.1.9",
-    "@nrwl/cypress": "14.1.9",
-    "@nrwl/eslint-plugin-nx": "14.1.9",
-    "@nrwl/jest": "14.1.9",
-    "@nrwl/linter": "14.1.9",
-    "@nrwl/nest": "^14.2.4",
-    "@nrwl/node": "14.2.4",
-    "@nrwl/nx-cloud": "14.0.5",
-    "@nrwl/workspace": "14.1.9",
-    "@testing-library/angular": "^11.0.3",
-    "@testing-library/cypress": "^8.0.2",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@nestjs/schematics": "10.0.1",
+    "@nestjs/testing": "10.0.3",
+    "@ngrx/schematics": "16.0.1",
+    "@ngrx/store-devtools": "16.0.1",
+    "@nx/cypress": "16.4.0",
+    "@nx/eslint-plugin": "16.4.0",
+    "@nx/jest": "16.4.0",
+    "@nx/linter": "16.4.0",
+    "@nx/nest": "16.4.0",
+    "@nx/node": "16.4.0",
+    "@nx/workspace": "16.4.0",
+    "@schematics/angular": "16.1.1",
+    "@testing-library/angular": "^14.1.1",
+    "@testing-library/cypress": "^9.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3",
     "@types/cookie-parser": "^1.4.3",
-    "@types/jest": "27.4.1",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "14.14.33",
-    "@types/nodemailer": "^6.4.4",
-    "@types/uuid": "^8.3.4",
+    "@types/jest": "29.4.4",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "18.7.1",
+    "@types/nodemailer": "^6.4.8",
+    "@types/uuid": "^9.0.2",
     "@types/voca": "^1.4.2",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
-    "autoprefixer": "^10.4.0",
-    "chalk": "^4.1.2",
-    "commitizen": "^4.2.5",
-    "cypress": "^9.1.0",
+    "@typescript-eslint/eslint-plugin": "5.60.0",
+    "@typescript-eslint/parser": "5.60.0",
+    "autoprefixer": "^10.4.14",
+    "chalk": "^5.2.0",
+    "commitizen": "^4.3.0",
+    "cypress": "^12.2.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "8.12.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "fake-indexeddb": "3.1.8",
-    "http-server": "^14.1.0",
-    "husky": "^8.0.1",
-    "jasmine-marbles": "~0.9.1",
-    "jest": "27.5.1",
+    "eslint": "8.43.0",
+    "eslint-config-prettier": "~8.8.0",
+    "eslint-plugin-cypress": "^2.13.3",
+    "fake-indexeddb": "4.0.1",
+    "http-server": "^14.1.1",
+    "husky": "^8.0.3",
+    "jasmine-marbles": "0.9.2",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "~29.4.3",
     "jest-environment-jsdom-sixteen": "^2.0.0",
-    "jest-preset-angular": "11.1.1",
-    "lint-staged": "^13.0.3",
-    "ng-packagr": "14.0.0",
+    "jest-preset-angular": "13.1.1",
+    "lint-staged": "^13.2.2",
+    "ng-packagr": "16.1.0",
     "npm-run-all": "^4.1.5",
-    "nx": "14.1.9",
+    "nx": "16.4.0",
+    "nx-cloud": "16.0.5",
     "pinst": "^3.0.0",
-    "postcss": "^8.4.5",
-    "postcss-import": "14.1.0",
-    "postcss-preset-env": "7.5.0",
-    "postcss-url": "10.1.3",
-    "prettier": "2.6.2",
-    "source-map-explorer": "^2.5.2",
-    "start-server-and-test": "^1.14.0",
-    "tailwindcss": "^3.0.2",
-    "ts-jest": "27.1.4",
-    "ts-node": "9.1.1",
-    "typescript": "4.6.4",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2"
+    "postcss": "^8.4.24",
+    "postcss-import": "15.1.0",
+    "postcss-preset-env": "8.5.1",
+    "postcss-url": "~10.1.3",
+    "prettier": "2.8.8",
+    "source-map-explorer": "^2.5.3",
+    "start-server-and-test": "^2.0.0",
+    "tailwindcss": "^3.3.2",
+    "ts-jest": "29.1.0",
+    "ts-node": "~10.9.1",
+    "typescript": "5.1.3",
+    "webpack-bundle-analyzer": "^4.9.0",
+    "webpack-cli": "^5.1.4"
   },
   "msw": {
     "workerDirectory": "libs/assets/src/lib/js/mockServiceWorker.js"
@@ -143,5 +146,9 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix",
+    "*.--all": "prettier --write"
   }
 }
